FUNCTION(build_test CODE)
	GET_FILENAME_COMPONENT(BASE "${CODE}" NAME_WE)
	GET_FILENAME_COMPONENT(EXT "${CODE}" EXT)

	ADD_EXECUTABLE(${BASE} ${CODE} main.cpp)


	TARGET_LINK_LIBRARIES(${BASE} protobuf_dyc libprotobuf )
	
	SET_TARGET_PROPERTIES(${BASE} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/)

	ADD_TEST(NAME ${BASE}
		COMMAND ${CMAKE_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE}/${BASE}
		WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/
	)
ENDFUNCTION()
IF(BUILD_TESTING)
  build_test("demo.cpp")
ENDIF(BUILD_TESTING)

